src/test/ui/rfc-2632-const-trait-impl/inherent-impl.stderr
error: inherent impls cannot be `const`
  --> $DIR/inherent-impl.rs:9:1
   |
LL | impl const S {}
   | ^^^^^^^^^^^^^^^
   |
   = note: only trait implementations may be annotated with `const`

error: inherent impls cannot be `const`
  --> $DIR/inherent-impl.rs:13:1
   |
LL | impl const T {}
   | ^^^^^^^^^^^^^^^
   |
   = note: only trait implementations may be annotated with `const`

error: const trait impls are not yet implemented
  --> $DIR/inherent-impl.rs:9:1
   |
LL | impl const S {}
   | ^^^^^^^^^^^^^^^

error: const trait impls are not yet implemented
  --> $DIR/inherent-impl.rs:13:1
   |
LL | impl const T {}
   | ^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

